[package]
name = "async_lab"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }      # The Async Runtime
serde = { version = "1.0", features = ["derive"] }  # The JSON Serializer
serde_json = "1.0"